force-app/main/default/objects/Lead/fields/Matched_Account_G2_Sessions_120_Days__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_G2_Sessions_120_Days__c</fullName>
    <formula>Znu_Matched_Account__r.Intent_G2_Events_120_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account G2 Sessions 120 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>