force-app/main/default/objects/Lead/fields/Matched_Account_ID18__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_ID18__c</fullName>
    <formula>Znu_Matched_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account ID18</label>
    <type>Text</type>
</CustomField>