force-app/main/default/objects/Lead/fields/Matched_Account_Lost__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Lost__c</fullName>
    <formula>Znu_Matched_Account__r.Lifetime_Lost_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>