force-app/main/default/objects/Lead/fields/Matched_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner__c</fullName>
    <formula>Znu_Matched_Account__r.Owner.FirstName + &quot; &quot; +  Znu_Matched_Account__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Owner</label>
    <type>Text</type>
</CustomField>