force-app/main/default/objects/Lead/fields/Matched_Account_SDR__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_SDR__c</fullName>
    <formula>Znu_Matched_Account__r.SDR__r.FirstName + &quot; &quot; +  Znu_Matched_Account__r.SDR__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account SDR</label>
    <type>Text</type>
</CustomField>