force-app/main/default/objects/Lead/fields/Matched_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Type__c</fullName>
    <formula>text(Znu_Matched_Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account Type</label>
    <type>Text</type>
</CustomField>