force-app/main/default/objects/Lead/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting Changed</fullName>
            </value>
            <value>
                <fullName>Meeting Cancelled</fullName>
            </value>
            <value>
                <fullName>Meeting Held</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>