force-app/main/default/objects/Lead/fields/MeetingNotes__c.field-meta.xml
<CustomField>
    <fullName>MeetingNotes__c</fullName>
    <label>MeetingNotes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>