force-app/main/default/objects/Lead/fields/Mkt_DataBricks__c.field-meta.xml
<CustomField>
    <fullName>Mkt_DataBricks__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_DataBricks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt DataBricks</label>
    <type>Text</type>
</CustomField>