force-app/main/default/objects/Lead/fields/Mkt_GitHub_CoPilot__c.field-meta.xml
<CustomField>
    <fullName>Mkt_GitHub_CoPilot__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_GitHub_CoPilot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt GitHub CoPilot</label>
    <type>Text</type>
</CustomField>