force-app/main/default/objects/Lead/fields/Mkt_Insights__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Insights__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_Insights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Insights</label>
    <type>Text</type>
</CustomField>