force-app/main/default/objects/Lead/fields/Mkt_J2EE__c.field-meta.xml
<CustomField>
    <fullName>Mkt_J2EE__c</fullName>
    <description>Inherit the Java 2 EE field signal from the corresponding account record.</description>
    <formula>Znu_Matched_Account__r.Mkt_J2EE__c</formula>
    <label>Mkt J2EE</label>
    <type>Text</type>
</CustomField>