force-app/main/default/objects/Lead/fields/Mkt_Microsoft__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Microsoft__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_Microsoft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Microsoft</label>
    <type>Text</type>
</CustomField>