force-app/main/default/objects/Lead/fields/Mkt_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Mkt_Salesforce__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_Salesforce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt Salesforce</label>
    <type>Text</type>
</CustomField>