force-app/main/default/objects/Lead/fields/Mkt_SCM__c.field-meta.xml
<CustomField>
    <fullName>Mkt_SCM__c</fullName>
    <formula>Znu_Matched_Account__r.Mkt_SCM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mkt SCM</label>
    <type>Text</type>
</CustomField>