force-app/main/default/objects/Lead/fields/MQL__c.field-meta.xml
<CustomField>
    <fullName>MQL__c</fullName>
    <description>Formula to mark a checkbox - if MQL Date is filled in, lead is marked an MQL</description>
    <formula>IF(ISBLANK(MQL_Date__c),FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL</label>
    <type>Checkbox</type>
</CustomField>