force-app/main/default/objects/Lead/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Timestamp for when the Lead became a Marketing Qualified Lead.</description>
    <inlineHelpText>The day this Lead became a MQL.</inlineHelpText>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>