force-app/main/default/objects/Lead/fields/MQL_Score__c.field-meta.xml
<CustomField>
    <fullName>MQL_Score__c</fullName>
    <label>MQL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>