force-app/main/default/objects/Lead/fields/Multiple_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Conversions__c</fullName>
    <formula>and(
 not isnull( First_Conversion_Date__c) , not isnull(Recent_Conversion_Date__c ),
 First_Conversion_Date__c &lt;&gt; Recent_Conversion_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiple Conversions</label>
    <type>Checkbox</type>
</CustomField>