force-app/main/default/objects/Lead/fields/Neverbounce_Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Neverbounce_Email_Status__c</fullName>
    <label>Neverbounce Email Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>