force-app/main/default/objects/Lead/fields/OBS_Macro_Source__c.field-meta.xml
<CustomField>
    <fullName>OBS_Macro_Source__c</fullName>
    <label>OBS_Macro Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Macro_Source</valueSetName>
    </valueSet>
</CustomField>