force-app/main/default/objects/Lead/fields/Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Close_Date__c</fullName>
    <label>Opp Close Date</label>
    <type>Date</type>
</CustomField>