force-app/main/default/objects/Lead/fields/Opp_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Meeting_Date__c</fullName>
    <label>Opp Meeting Date</label>
    <type>DateTime</type>
</CustomField>