force-app/main/default/objects/Lead/fields/Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name__c</fullName>
    <description>Name to create Opportunity</description>
    <label>Opp Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>