force-app/main/default/objects/Lead/fields/Opp_Notes_on_Create__c.field-meta.xml
<CustomField>
    <fullName>Opp_Notes_on_Create__c</fullName>
    <label>Opp Notes on Create</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>