force-app/main/default/objects/Lead/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <description>Text name for Opportunity Owner</description>
    <label>Opp Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>