force-app/main/default/objects/Lead/fields/Opp_SDR_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_SDR_Name__c</fullName>
    <label>Opp SDR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>