force-app/main/default/objects/Lead/fields/Opp_Source__c.field-meta.xml
<CustomField>
    <fullName>Opp_Source__c</fullName>
    <label>Opp Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDR Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>