force-app/main/default/objects/Lead/fields/Outreach_Actively_being_sequenced__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Actively_being_sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actively being Sequenced</label>
    <type>Checkbox</type>
</CustomField>