force-app/main/default/objects/Lead/fields/Outreach_Current_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Name__c</fullName>
    <label>Current Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>