force-app/main/default/objects/Lead/fields/Outreach_Tag__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Tag__c</fullName>
    <description>Freeform text field in which to place a tag to synch with Outreach for users there to organize by tags.</description>
    <label>Outreach Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>