force-app/main/default/objects/Lead/fields/Person_Has_Moved__c.field-meta.xml
<CustomField>
    <fullName>Person_Has_Moved__c</fullName>
    <label>Person Has Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>