force-app/main/default/objects/Lead/fields/persona_score__c.field-meta.xml
<CustomField>
    <fullName>persona_score__c</fullName>
    <description>Score based on the Lead or Contact&apos;s role and function within the organization.</description>
    <label>Persona Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>