force-app/main/default/objects/Lead/fields/Personal_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email_2__c</fullName>
    <description>Used if a lead has 2 personal emails.</description>
    <label>Personal Email 2</label>
    <type>Email</type>
</CustomField>