force-app/main/default/objects/Lead/fields/Reason_For_Disqualifying__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Disqualifying__c</fullName>
    <label>Reason For Disqualifying</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>