force-app/main/default/objects/Lead/fields/Round_Robin_Base_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_Base_Number__c</fullName>
    <description>This is used as a modulus for Round Robin</description>
    <displayFormat>{0000000}</displayFormat>
    <label>Round Robin Base Number</label>
    <type>AutoNumber</type>
</CustomField>