force-app/main/default/objects/Lead/fields/Run_Lead_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Run_Lead_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to kick of the Lead Assignment flow</description>
    <label>Run Lead Assignment</label>
    <type>Checkbox</type>
</CustomField>