force-app/main/default/objects/Lead/fields/Warm_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Warm_Lead_Status__c</fullName>
    <label>Warm Lead Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>