force-app/main/default/objects/Lead/fields/Warmly_Segment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Warmly_Segment_Formula__c</fullName>
    <formula>if(find(&quot;git&quot;, warmlylastpagesviewed__c ) &gt; 0,&quot;github&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warmly Segment Formula</label>
    <type>Text</type>
</CustomField>