force-app/main/default/objects/Lead/fields/warmlyidentificationtype__c.field-meta.xml
<CustomField>
    <fullName>warmlyidentificationtype__c</fullName>
    <description>The source for how Warmly identified the contact&apos;s email</description>
    <label>Warmly: Identification Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>w_email</fullName>
            </value>
            <value>
                <fullName>form_fill</fullName>
                <label>Form Fill</label>
            </value>
            <value>
                <fullName>inbound_chat_inquiry</fullName>
                <label>Inbound Chat Form</label>
            </value>
            <value>
                <fullName>shared_cookie</fullName>
                <label>Shared Warmly Cookie</label>
            </value>
            <value>
                <fullName>hubspotutk</fullName>
                <label>HubspotUTK Cookie</label>
            </value>
            <value>
                <fullName>previous_session</fullName>
                <label>Previous Session</label>
            </value>
            <value>
                <fullName>warmly_contact</fullName>
                <label>IP to Contact Database</label>
            </value>
            <value>
                <fullName>ai_chat_email_followup</fullName>
                <label>AI Chat Form</label>
            </value>
            <value>
                <fullName>warmly_login</fullName>
                <label>Warmly User</label>
            </value>
            <value>
                <fullName>rb2b</fullName>
                <label>RB2B Contact</label>
            </value>
            <value>
                <fullName>vector</fullName>
                <label>Vector Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>