force-app/main/default/objects/Lead/fields/warmlylastchatcontent__c.field-meta.xml
<CustomField>
    <fullName>warmlylastchatcontent__c</fullName>
    <description>Last chat message in chat from anyone</description>
    <label>Warmly: Last Chat Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>