force-app/main/default/objects/Lead/fields/warmlymatchedsegmentslist__c.field-meta.xml
<CustomField>
    <fullName>warmlymatchedsegmentslist__c</fullName>
    <description>List of Warmly segments this record matches</description>
    <label>Warmly: Segments List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>