force-app/main/default/objects/Lead/fields/warmlyprospectorworkflow__c.field-meta.xml
<CustomField>
    <fullName>warmlyprospectorworkflow__c</fullName>
    <description>The workflow which prospected this contact</description>
    <label>Warmly: Prospector Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>