force-app/main/default/objects/Lead/fields/warmlytotalactivetime__c.field-meta.xml
<CustomField>
    <fullName>warmlytotalactivetime__c</fullName>
    <description>Sum in seconds from all website sessions for this visitor</description>
    <label>Warmly: Total active time</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>