force-app/main/default/objects/Lead/fields/warmlytotalpagesviewed__c.field-meta.xml
<CustomField>
    <fullName>warmlytotalpagesviewed__c</fullName>
    <description>Number of page views from all sessions for this visitor</description>
    <label>Warmly: Total pages viewed</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>