force-app/main/default/objects/Lead/fields/Znu_Company__c.field-meta.xml
<CustomField>
    <fullName>Znu_Company__c</fullName>
    <label>Znu Company</label>
    <length>128</length>
    <type>Text</type>
</CustomField>