force-app/main/default/objects/Lead/fields/Znu_Employees__c.field-meta.xml
<CustomField>
    <fullName>Znu_Employees__c</fullName>
    <label>Znu Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>