force-app/main/default/objects/Lead/fields/Znu_G2000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Znu_G2000_Rank__c</fullName>
    <label>Znu G2000 Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>