force-app/main/default/objects/Lead/fields/Znu_HQ_Phone__c.field-meta.xml
<CustomField>
    <fullName>Znu_HQ_Phone__c</fullName>
    <label>Znu HQ Phone</label>
    <type>Phone</type>
</CustomField>