force-app/main/default/objects/Lead/fields/Znu_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>Znu_HQ_State__c</fullName>
    <label>Znu HQ State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>