force-app/main/default/objects/Lead/fields/Znu_Industry__c.field-meta.xml
<CustomField>
    <fullName>Znu_Industry__c</fullName>
    <label>Znu Industry</label>
    <length>128</length>
    <type>Text</type>
</CustomField>