force-app/main/default/objects/Lead/fields/Znu_Match_Date__c.field-meta.xml
<CustomField>
    <fullName>Znu_Match_Date__c</fullName>
    <label>Znu Match Date</label>
    <type>Date</type>
</CustomField>