force-app/main/default/objects/Lead/fields/Znu_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Znu_Match_Status__c</fullName>
    <label>Znu Match Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>