force-app/main/default/objects/Lead/fields/Znu_Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Znu_Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Matches account id to leads</description>
    <label>Matched Account (Znu)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Matched Account (Znu))</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>