force-app/main/default/objects/Lead/fields/Znu_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Znu_Revenue__c</fullName>
    <label>Znu Revenue</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>