force-app/main/default/objects/Lead/fields/Znu_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Znu_Revenue_Range__c</fullName>
    <label>Znu Revenue Range</label>
    <length>80</length>
    <type>Text</type>
</CustomField>