force-app/main/default/objects/Lead/fields/ZZ_Data__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Data__c</fullName>
    <label>ZZ_Data</label>
    <length>100</length>
    <type>Text</type>
</CustomField>