force-app/main/default/objects/Lead/fields/ZZ_Force_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>ZZ_Force_Sync_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>ZZ Force Sync Date</label>
    <type>Date</type>
</CustomField>