force-app/main/default/objects/Lead/recordTypes/New.recordType-meta.xml
<RecordType>
    <fullName>New</fullName>
    <active>true</active>
    <businessProcess>Raw</businessProcess>
    <label>Outbound</label>
</RecordType>