force-app/main/default/objects/Lead/validationRules/Disqualifying_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Disqualifying_reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(  Status , &apos;Disqualified&apos; ),
  ISBLANK( Reason_For_Disqualifying__c )
)</errorConditionFormula>
    <errorDisplayField>Reason_For_Disqualifying__c</errorDisplayField>
    <errorMessage>Please fill in the reason for disqualifying</errorMessage>
</ValidationRule>