force-app/main/default/objects/Lead/listViews/Amber_All_Accounts.listView-meta.xml
<ListView>
    <fullName>Amber_All_Accounts</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL_OPT_OUT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>contains</operation>
        <value>@centene.com</value>
    </filters>
    <filters>
        <field>LEAD.TITLE</field>
        <operation>contains</operation>
        <value>Salesforce</value>
    </filters>
    <label>Amber All Accounts</label>
</ListView>