force-app/main/default/objects/Lead/listViews/Angelbeat_Webinar_Jan_2022.listView-meta.xml
<ListView>
    <fullName>Angelbeat_Webinar_Jan_2022</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>contains</operation>
        <value>Angelbeat</value>
    </filters>
    <label>Angelbeat Webinar Jan 2022</label>
</ListView>