force-app/main/default/objects/Lead/listViews/AWS_21_Tier_1.listView-meta.xml
<ListView>
    <fullName>AWS_21_Tier_1</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>AWS Reinvent 2021 - Demo Request,AWS Reinvent 2021 - Raffle Survey</value>
    </filters>
    <label>AWS 21-Tier 1</label>
</ListView>