force-app/main/default/objects/Lead/listViews/AWS_21_Tier_2.listView-meta.xml
<ListView>
    <fullName>AWS_21_Tier_2</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign__c</field>
        <operation>equals</operation>
        <value>AWS Reinvent 2021 - Lead Scan</value>
    </filters>
    <label>AWS 21-Tier 2</label>
</ListView>