force-app/main/default/objects/Lead/listViews/ClearConnect_Leads.listView-meta.xml
<ListView>
    <fullName>ClearConnect_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Max,Sherdah</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Assigned,Nurture,Working,List Data</value>
    </filters>
    <label>ClearConnect Leads</label>
    <language>en_US</language>
</ListView>